--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+
+#  Temporary files created by latex bookdown
+HousePriceRegressionAnalysis_files/
+*.tex
+
